--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
             <version>2.9.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>logging-interceptor</artifactId>
+            <version>3.12.1</version>
+        </dependency>
     </dependencies>
 
     <build>
