--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,17 @@
             <artifactId>logging-interceptor</artifactId>
             <version>3.12.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.derby</groupId>
+            <artifactId>derbyclient</artifactId>
+            <version>10.13.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.5.7.Final</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
